--- a/client/public/index.html
+++ b/client/public/index.html
@@ -34,7 +34,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" style="background-color: rgba(var(--b3f,250,250,250),1)"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
