--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,10 +32,9 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body style="background-color: rgba(var(--b3f,250,250,250),1);">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="background-color: rgba(var(--b3f,250,250,250),1)"></div>
-    <!--
+    <div id="root" ></div>    <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
